[gd_scene load_steps=3 format=3 uid="uid://ccmf3j8crwo6v"]

[ext_resource type="Script" uid="uid://yvmqnge50epx" path="res://end.gd" id="1_egc6y"]
[ext_resource type="AudioStream" uid="uid://cslnxx10lt6i1" path="res://Assets/confirm_style_5_005.wav" id="2_lt2ag"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_egc6y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.10980392, 0.21568628, 0.6901961, 1)

[node name="Container" type="Container" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -42.5
offset_right = 67.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/Container/VBoxContainer"]
layout_mode = 2
text = "You have won"

[node name="Label2" type="Label" parent="ColorRect/Container/VBoxContainer"]
layout_mode = 2
text = "something went wrong"

[node name="Button" type="Button" parent="ColorRect/Container/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_lt2ag")

[connection signal="pressed" from="ColorRect/Container/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
